# FibotX

./: README.md
src/: dynamixel_control.repos
src/open_manipulator_x_description/launch/: open_manipulator_x.launch.py
src/open_manipulator_x_description/urdf/: open_manipulator_x.ros2_control.xacro  open_manipulator_x.ros2_control_gazebo.xacro
src/robot_motion_service/: CMakeLists.txt  package.xml
src/robot_motion_service/launch/: launch_robot_services.py
src/robot_motion_service/scripts/: Robot_Ui.py  kinematic_fibox.py  kinematics.py  kinematics_service.py  motion_service.py  mqtt_sub_service.py  publist.py
src/robot_motion_service/scripts/Assem_For_URDF_4/: CMakeLists.txt  kinematic.py  kinematics.py  package.xml  test.py  test_each_joint.py  test_function.ipynb  test_function.py  ui_control.py  ui_position_control.py
src/robot_motion_service/scripts/Assem_For_URDF_4/config/: joint_names_Assem_For_URDF_4.yaml
src/robot_motion_service/scripts/Assem_For_URDF_4/launch/: display.launch  gazebo.launch
src/robot_motion_service/scripts/Assem_For_URDF_4/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL
src/robot_motion_service/scripts/Assem_For_URDF_4/urdf/: Assem_For_URDF_4.csv  Assem_For_URDF_4.urdf
src/robot_motion_service/srv/: SetPosition.srv  SolveIK.srv
